--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -10,8 +10,8 @@
     <div id="username-form">
         <h1>Ingrese su nombre</h1>
         <form id="username-form" action="/api/msg" method="POST">
-        <input type="text" id="username" name="nombre" required>
-        <input type="text" id="message" name="message" required>
+        <input type="text" id="username" placeholder ="Ingrese su Nombre" name="user" required>
+        <input type="text" id="message" placeholder="Ingrese su mensaje" name="message" required>
         <button type="submit">Ingresa al Chat</button>
 
         
